--- a/.github/workflows/6dylan6.yml
+++ b/.github/workflows/6dylan6.yml
@@ -19,6 +19,6 @@ jobs:
         if: env.PAT
         with:
           source_repo: "https://github.com/6dylan6/jdpro.git"
-          source_branch: "mian"
+          source_branch: "main"
           destination_branch: "pro"
           github_token: ${{ secrets.PAT }}
