--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: SyncToGitee #命名随意
 on:       #触发条件，自己可以随意修改
   push:
-    branches: [main] #你的分支名
+    branches: [pro] #你的分支名
   workflow_dispatch:
 jobs:
   build:
@@ -17,3 +17,4 @@ jobs:
           source-repo: git@github.com:https://github.com/andadmadm/buckup.git
           # 注意替换为你的 Gitee 目标仓库地址
           destination-repo: git@gitee.com:https://gitee.com/chmc7/buckup.git
+          destination_branch: "pro"
