--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,5 +16,6 @@ jobs:
           # 注意替换为你的 GitHub 源仓库地址
           source-repo: git@github.com:https://github.com/andadmadm/buckup.git
           # 注意替换为你的 Gitee 目标仓库地址
+          source_branch: "pro"
           destination-repo: git@gitee.com:https://gitee.com/chmc7/buckup.git
           destination_branch: "pro"
