--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: SyncToGitee #命名随意
 on:       #触发条件，自己可以随意修改
-  push:
-    branches: [main] #你的分支名
+  schedule:
+    - cron: '13 1-23/4 * * *'
   workflow_dispatch:
 jobs:
   build:
