--- a/.github/workflows/SyncToGitee(yyds).yml
+++ b/.github/workflows/SyncToGitee(yyds).yml
@@ -14,7 +14,8 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
         with:
           # 注意替换为你的 GitHub 源仓库地址
-          source-repo: git@github.com:okyyds/yydspure.git.git
+          source-repo: git@github.com:okyyds/yydspure.git
           source_branch: "master"
           # 注意替换为你的 Gitee 目标仓库地址
           destination-repo: git@gitee.com:chmc7/yyds.git
+          destination_branch: "main"
