--- a/.github/workflows/SyncToGitee(yyds).yml
+++ b/.github/workflows/SyncToGitee(yyds).yml
@@ -18,4 +18,4 @@ jobs:
           source_branch: "master"
           # 注意替换为你的 Gitee 目标仓库地址
           destination-repo: git@gitee.com:chmc7/yyds.git
-          destination_branch: "main"
+          destination_branch: "yyds"
