--- a/.github/workflows/Sync-To-Gitee-and-Coding.yml
+++ b/.github/workflows/Sync-To-Gitee-and-Coding.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Clone
         run: |
           git init
-          git remote add origin git@github.com:${GITHUB_REPOSITORY}.git
+          git remote add origin "https://andadmadm:${GITHUB_PASSWORD}@github.com/andadmadm/buckup.git"
           git fetch --all
           for branch in `git branch -a | grep remotes | grep -v HEAD`; do
             git branch --track ${branch##*/} $branch
