--- a/.github/workflows/sync(okyyds同步).yml
+++ b/.github/workflows/sync(okyyds同步).yml
@@ -18,7 +18,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/okyyds/yydspure.git"
+          source_repo: "https://github.com/okyyds/yyds.git"
           source_branch: "master"
           destination_branch: "yyds"
           github_token: ${{ secrets.PAT }}
