--- a/.github/workflows/Gitee.yml
+++ b/.github/workflows/Gitee.yml
@@ -31,7 +31,7 @@ jobs:
           CODING_PASSWORD: ${{ secrets.CODING_PASSWORD }}     # coding密码
       - name: Push to Gitee
         run: |
-          remote_repo="https://${GITEE_USERNAME}:${GITEE_PASSWORD}@gitee.com/${GITEE_REPOSITORY}.git"
+          remote_repo="https://${GITEE_USERNAME}:${GITEE_PASSWORD}@gitee.com/open-bk/bk.git"
           git remote add gitee "${remote_repo}"
           git show-ref # useful for debugging
           git branch --verbose
