--- a/.github/workflows/Gitee.yml
+++ b/.github/workflows/Gitee.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Clone
         run: |
           git init
-          git remote add origin https://oauth2%3A${secrets.PAT}@github.com/${GITHUB_REPOSITORY}.git
+          git remote add origin https://oauth2:${{ secrets.PAT }}@github.com/${GITHUB_REPOSITORY}.git
           git fetch --all
           for branch in `git branch -a | grep remotes | grep -v HEAD`; do
             git branch --track ${branch##*/} $branch
