--- a/.github/workflows/sync(pangbai6同步-纯内部).yml
+++ b/.github/workflows/sync(pangbai6同步-纯内部).yml
@@ -18,7 +18,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/pangbai6/pangbai66"
+          source_repo: "https://github.com/pangbai6/pangbai66.git"
           source_branch: "main"
           destination_branch: "pangbai6"
           github_token: ${{ secrets.PAT }}
