--- a/.github/workflows/Sync-To-Gitee-and-Coding.yml
+++ b/.github/workflows/Sync-To-Gitee-and-Coding.yml
@@ -31,7 +31,7 @@ jobs:
           CODING_PASSWORD: ${{ secrets.CODING_PASSWORD }}     # coding密码
       - name: Push to Coding2
         run: |
-          remote_repo="https://${CODING_USERNAME}:${CODING_PASSWORD}@e.coding.net/buckup/buckup1.git"
+          remote_repo="https://${CODING_USERNAME}:${CODING_PASSWORD}@e.coding.net/bkca5/buckup/buckup1.git"
           git remote add coding "${remote_repo}"
           git show-ref # useful for debugging
           git branch --verbose
