--- a/.github/workflows/sync(Grasscutter同步).yml
+++ b/.github/workflows/sync(Grasscutter同步).yml
@@ -18,7 +18,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/he1pu/JDHelp.git"
+          source_repo: "https://github.com/Grasscutters/Grasscutter.git"
           source_branch: "main"
-          destination_branch: "help"
+          destination_branch: "Grasscutter"
           github_token: ${{ secrets.PAT }}
